@@ -4,7 +4,7 @@ rvm:
   - 1.9.2
   - 1.9.3
   - ree
-  - ruby-head
+  # - ruby-head
 language: ruby
 notifications:
   recipients:
