@@ -45,13 +45,25 @@ You may also specify an email address for the notification emails from field:
 
 ## CONFIGURATION
 
-The generator copies the view files to `app/views/contact_us`, and you can customize them to suit your needs.  If you would like to add a name or subject field to the form you may simply
+If you would like to add a name or subject field to the form you may simply
 set the options to true within the contact_us initializer located at `config/initializers/contact_us.rb`:
 
     config.require_name = true
     config.require_subject = true
 
-You may also update your locales under `config/locales/contact_us.en.yml` or create your own.  Please feel free to submit your own locales so that other users will hopefully find this gem more useful.
+### Views
+
+To copy the view files to `app/views/contact_us`, and customize them to suit your needs run:
+
+    bundle exec rake contact_us:copy_views
+
+### Locales
+
+To copy the locale files to `config/locales/contact_us.*.yml`, and customize them to suit your needs run:
+
+    bundle exec rake contact_us:copy_locales
+
+Please feel free to submit your own locales so that other users will hopefully find this gem more useful in your language.
 
 ### Formtastic
 
@@ -112,6 +124,5 @@ Here are some ways *you* can contribute:
 ## TODO
 
 * Add new language translations.
-* Stop copying views/locales by default.
 
 Copyright (c) 2011 Jeff Dutil, released under the [MIT license](https://github.com/jdutil/contact_us/tree/master/MIT-LICENSE).
